Just updating, tried fixing overlap issue, did not work

--- a/style.css
+++ b/style.css
@@ -7,14 +7,18 @@
   text-decoration: none;
 }
 html {
-  font-size: 30px;
-  font-family: "Fira Mono", monospace;
+  font-family: "Poppins", sans-serif;
+}
+section {
+  min-height: 100vh;
+  align-items: center;
 }
 #hero {
   width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(Images/hero-backround.jpg) no-repeat center / cover;
+    url(/MazinAshfaq.github.io/Images/hero-backround.jpg) no-repeat center /
+      cover;
   color: white;
 }
 
@@ -27,12 +31,12 @@ html {
   justify-content: center;
 }
 .container .title h1 {
-  font-size: 3rem;
+  font-size: 7rem;
   margin-bottom: 1rem;
 }
 
 .container .title h2 {
-  font-size: 1.2rem;
+  font-size: 2.5rem;
   margin-bottom: 0.3rem;
 }
 
@@ -42,7 +46,7 @@ html {
   display: inline-block;
   background-color: #fca311;
   border-radius: 6px;
-  font-size: 0.8rem;
+  font-size: 1.5rem;
   padding: 0.5em 2em;
   margin-top: 1rem;
   transition: transform 0.2s;
@@ -59,6 +63,7 @@ html {
   font-size: 5rem;
   margin-bottom: 1rem;
 }
+
 /*Navigation Bar desktop view*/
 nav {
   display: flex;
@@ -163,33 +168,60 @@ nav {
 /* About me*/
 
 #AboutMe {
-  width: 100%;
-  height: 100vh;
   background: #e5e5e5;
-  color: white;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 .AboutMe {
-  color: #fff;
-  background: #2d2d2d;
-  margin: 30px;
-  display: inline-block;
-  position: absolute;
+  width: 100%;
+  max-width: 1160px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
-.left-box {
-  color: #fff;
-  background: white;
-  padding: 12px;
-  display: inline-block;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2.5rem;
+  align-items: center;
+  justify-content: center;
+}
+.left-box img {
+  max-width: 500px;
+  height: auto;
+  vertical-align: middle;
 }
 
 .right-box {
-  color: #fff;
-  background: white;
+  color: #14213d;
+  width: 500px;
   padding: 12px;
   display: inline-block;
+  vertical-align: top;
+  margin-bottom: 1.1rem;
+}
+
+.right-box h4 {
+  color: #fca311;
+  margin-bottom: 1rem;
+  margin-top: 1.5rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  display: inline-block;
+}
+.right-box h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.right-box p {
+  text-align: justify;
+}
+
+@media screen and (max-width: 1090px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
